fixed spacing issue

--- a/src/components/news/newsCard.css
+++ b/src/components/news/newsCard.css
@@ -122,6 +122,10 @@
         font-size: 14px;
         padding-bottom: 5px; 
     }
+    .article-content p {
+        margin-bottom: 0px; 
+        margin-top: 10px; 
+    }
 }
 
 @media(min-width: 500px){
